[package]
name = "wwasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "Window"
]

# https://github.com/rustwasm/wasm-pack/issues/864
[package.metadata.wasm-pack.profile.release]
wasm-opt = false